[gd_scene load_steps=11 format=3 uid="uid://bd8hs0i08v081"]

[ext_resource type="Script" uid="uid://dsy56u3vxcw48" path="res://enemies/jumping_enemy/jumping_enemy.gd" id="1_72q3a"]
[ext_resource type="Material" uid="uid://sirjghwctyid" path="res://enemies/base_enemy/base_enemy.tres" id="2_vye8c"]
[ext_resource type="Material" uid="uid://nghqt0ifsqwk" path="res://enemies/base_enemy/base_enemy_damage.tres" id="3_m5g38"]

[sub_resource type="CylinderMesh" id="CylinderMesh_nx4wd"]
resource_local_to_scene = true
material = ExtResource("2_vye8c")
top_radius = 0.3
bottom_radius = 0.6
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jynoq"]
height = 1.0

[sub_resource type="Animation" id="Animation_jc6ys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_vye8c")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("MeshInstance3D:mesh:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_72q3a"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_8sayp"]
resource_name = "death"
length = 0.333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.5, 0.1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("MeshInstance3D:mesh:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.16666667, 0.333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:mesh:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_m5g38")]
}

[sub_resource type="Animation" id="Animation_02xms"]
resource_name = "hurt"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [ExtResource("2_vye8c"), ExtResource("3_m5g38")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc6ys"]
_data = {
&"RESET": SubResource("Animation_jc6ys"),
&"attack": SubResource("Animation_72q3a"),
&"death": SubResource("Animation_8sayp"),
&"hurt": SubResource("Animation_02xms")
}

[node name="JumpingEnemy" type="AnimatableBody3D"]
collision_layer = 8
collision_mask = 2
sync_to_physics = false
script = ExtResource("1_72q3a")
jump_height = 3.0
jump_cooldown = 6.0
max_health = 20.0
dimensions = Vector3(1.2, 1, 1.2)
animation_time = 1.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)
mesh = SubResource("CylinderMesh_nx4wd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5)
shape = SubResource("CylinderShape3D_jynoq")

[node name="HPLabel" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 5.6194274e-08, -6.696973e-08, 0, 0.76604444, 0.6427876, 8.742278e-08, 0.6427876, -0.76604444, 0.5, 1.3, 0.5)
text = "HP"
font_size = 72

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jc6ys")
}

[node name="JumpTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_cooldown_reset"]
